--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "author": "Andrew Mead",
   "license": "MIT1",
   "scripts": {
-    "serve": "live-server public/",
-    "build": "webpack --watch",
-    "dev-server": "webpack-dev-server"
+   
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
